crates/uitest/fixtures/name_resolution/const_generic_args.snap
---
source: crates/uitest/tests/name_resolution.rs
assertion_line: 26
expression: diags
input_file: fixtures/name_resolution/const_generic_args.fe
---
error[2-0011]: incorrect number of generic arguments for `C`; expected 0, given 1
  ┌─ const_generic_args.fe:7:8
  │
7 │     m::C<i32>
  │        ^ expected 0 arguments, but 1 were given
